--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "php": ">=8.0"
     },
     "require-dev": {
+        "php": ">=8.2",
         "phpunit/phpunit": "^11.2"
     },
     "license": "MIT",
