--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
         "php": ">=8.0"
     },
     "require-dev": {
-        "php": ">=8.2",
         "phpunit/phpunit": "^11.2"
     },
     "license": "MIT",
@@ -30,5 +29,10 @@
     "prefer-stable": true,
     "scripts": {
         "test": "vendor/bin/phpunit"
+    },
+    "config": {
+        "platform": {
+            "php": "8.2.0"
+        }
     }
 }
